swaggerを修正
